--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-icons": "^3.0.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.6"
   }
 }
