--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.4",
+    "faker": "^5.5.3",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "polished": "^4.0.5",
