--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.4",
     "faker": "^5.5.3",
     "formik": "^2.2.6",
+    "jest-canvas-mock": "^2.3.1",
     "lodash": "^4.17.21",
     "polished": "^4.0.5",
     "react": "^17.0.1",
